Now displays some basic stuff

--- a/ishare/templates/core/index.html
+++ b/ishare/templates/core/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h3>My Items</h3>
+    {% for item in items %}
+    <p>{{item}}</p>
+    <blockquote>
+        {% for history in item.history_set.all %}
+        <p>{{history}}
+        {% endfor %}
+    </blockquote>
+    {% endfor %}
 </body>
 </html>
