Changes name of items to my_items

--- a/ishare/templates/core/index.html
+++ b/ishare/templates/core/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>My Items</h3>
-    {% for item in items %}
+    {% for item in my_items %}
     <p>{{item}}</p>
     <blockquote>
         {% for history in item.history_set.all %}
