Show items friends have shared with me

--- a/ishare/templates/core/index.html
+++ b/ishare/templates/core/index.html
@@ -16,5 +16,10 @@
         {% endfor %}
     </blockquote>
     {% endfor %}
+    <hr>
+    <h3>Friend Items</h3>
+    {% for item in friend_items %}
+    <p>{{item}} - {{item.owner}} - </p>
+    {% endfor %}
 </body>
 </html>
