--- a/ishare/templates/core/index.html
+++ b/ishare/templates/core/index.html
@@ -18,7 +18,8 @@
     <div class="my_items">
         <h2>My Items</h2>
         {% for item in my_items %}
-        <p>{{item}}</p>
+        <p>{{item}} -
+            {% if item.is_available %}Available{% else %}Checked Out{% endif %}</p>
         <blockquote>
             {% for history in item.history_set.all %}
             <p>{{history}}
@@ -33,11 +34,7 @@
         <p>{{item}} -
            {{item.owner}} -
 
-            {% if item.is_available %}
-            Available
-            {% else %}
-            Checked Out
-            {% endif %}</p>
+            {% if item.is_available %}Available{% else %}Checked Out{% endif %}</p>
         {% endfor %}
     </div>
 </body>
