Template now extending a base template

--- a/ishare/templates/core/index.html
+++ b/ishare/templates/core/index.html
@@ -1,39 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-   "http://www.w3.org/TR/html4/strict.dtd">
-
-<html lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>iSahre</title>
-	<style type="text/css" media="screen">
-	   div {
-	       float: left;
-	       margin-right: 3em;
-	       border: 1px solid #666;
-	       padding: 1em;
-	   }
-       .status_not_available { color: #d00; }
-       .status_available { color: #0a0; }
-	</style>
-</head>
-<body>
-    <div class="my_items">
-        <h2>My Items</h2>
-        {% for item in my_items %}
-        <p>{{item}} - {% include "core/item_status.html" %}</p>
-        <blockquote>
-            {% for history in item.history_set.all %}
-            <p>{{history}}
-            {% endfor %}
-        </blockquote>
+{% extends "core/base.html" %}
+{% block main_content %}
+<div class="my_items">
+    <h2>My Items</h2>
+    {% for item in my_items %}
+    <p>{{item}} - {% include "core/item_status.html" %}</p>
+    <blockquote>
+        {% for history in item.history_set.all %}
+        <p>{{history}}
         {% endfor %}
-    </div>
+    </blockquote>
+    {% endfor %}
+</div>
 
-    <div class="friend_items">
-        <h2>Friend Items</h2>
-        {% for item in friend_items %}
-        <p>{{item}} - {{item.owner}} - {% include "core/item_status.html" %}</p>
-        {% endfor %}
-    </div>
-</body>
-</html>
+<div class="friend_items">
+    <h2>Friend Items</h2>
+    {% for item in friend_items %}
+    <p>{{item}} - {{item.owner}} - {% include "core/item_status.html" %}</p>
+    {% endfor %}
+</div>
+{% endblock %}
