--- a/ishare/templates/core/item_detail.html
+++ b/ishare/templates/core/item_detail.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
 {% block main_content %}
-    {{ item }}
+    <a href="/">Home</a>
+    <h2>{{ item }}</h2>
 {% endblock %}
