--- a/ishare/templates/core/item_detail.html
+++ b/ishare/templates/core/item_detail.html
@@ -2,4 +2,5 @@
 {% block main_content %}
     <a href="/">Home</a>
     <h2>{{ item }}</h2>
+    {% include "core/subs/history_list.html" %}
 {% endblock %}
