--- a/ishare/templates/core/item_detail.html
+++ b/ishare/templates/core/item_detail.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'base.html' %}
 {% block main_content %}
     <a href="/">Home</a>
     <h2>{{ item }}</h2>
