Add a link to be able to create item from the main page

--- a/ishare/templates/core/index.html
+++ b/ishare/templates/core/index.html
@@ -8,6 +8,8 @@
         {% include "core/subs/history_list.html" %}
     </blockquote>
     {% endfor %}
+    <hr>
+    <a href="{% url item_add %}">Add Item</a>
 </div>
 
 <div class="friend_items">
