--- a/ishare/templates/base.html
+++ b/ishare/templates/base.html
@@ -5,14 +5,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>iSahre</title>
-	<style type="text/css" media="screen">
-        div.top_bar { text-align: right; background-color: #CCC; padding: 0.5em 0.75em; margin-bottom: 1em; line-height: 1.5em; border-radius: 5px; }
-        div.top_bar h1 { margin: 0pt; float: left; font-size: 1.5em; }
+    <link rel="stylesheet" href="/site_media/css/global.css" type="text/css" charset="utf-8" />
+	<script type='text/javascript' src='/site_media/js/jquery-1.5.min.js'></script>
+	<script type='text/javascript' src='/site_media/js/sammy/sammy.js'></script>
 
-        div.main_content div { float: left; margin-right: 3em; border: 1px solid #666; padding: 1em; }
-       .status_not_available { color: #d00; }
-       .status_available { color: #0a0; }
-	</style>
 </head>
 <body>
     <div class="top_bar">
